# fast-agent-stack

./: .gitignore  .readthedocs.yaml  .wolverine-kit.yml  CHANGELOG.md  CLAUDE.md  README.dev.md  README.md  README.test.md  TODO.md  pyproject.toml  pyproject.toml.orig  zensical.toml
.claude/agents/: fas-architect-reviewer.md  fas-change-propagator.md  fas-decision-author.md  fas-dependency-auditor.md  fas-drift-detector.md  fas-gatekeeper.md  fas-glossary-steward.md  fas-phase-tracker.md  fas-py-protocol-validator.md  fas-spec-synthesizer.md  fas-test-author.md
.claude/commands/: fas-check.md  fas-decision.md  fas-deps.md  fas-drift.md  fas-help.md  fas-impl-brief.md  fas-impl.md  fas-propagate.md  fas-review-spec.md  fas-status.md  fas-test.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  e2e.yml  publish.yml  testpypi.yml
docs/: ai.md  api-reference.md  auth.md  configuration.md  custom-backends.md  deployment.md  getting-started.md  index.md  migration.md  rag.md  ratelimit.md  storage.md  tasks.md
docs/guides/: index.md
docs/guides/framework-integration/: index.md  pydantic-ai.md  strands-agents.md
docs/tutorial/: 00-prerequisites.md  01-hello-world.md  01-scaffold.md  02-database-models.md  03-authentication.md  04-ingestion-agent.md  05-chat-agent.md  06-chat-ui.md  07-background-tasks.md  08-production.md  docker-compose.yml  index.md
fast_agent_stack/: __init__.py
fast_agent_stack/ai/: __init__.py
fast_agent_stack/ai/llm/: __init__.py
fast_agent_stack/auth/: __init__.py
fast_agent_stack/cli/: auth.py  db.py  main.py  new.py  run.py  scheduler_cmd.py  update.py  worker.py
fast_agent_stack/config/: __init__.py
fast_agent_stack/core/: app.py  config.py  database.py  health.py  middleware.py  protocols.py
fast_agent_stack/core/admin/: __init__.py  lifespan.py  views.py
fast_agent_stack/core/ai/: agents.py  conversation.py  streaming.py  usage.py
fast_agent_stack/core/ai/embedding/: __init__.py
fast_agent_stack/core/ai/extraction/: __init__.py
fast_agent_stack/core/ai/llm/: __init__.py  anthropic.py  bedrock.py  litellm.py  openai.py
fast_agent_stack/core/ai/migrations/: env.py
fast_agent_stack/core/ai/rag/: __init__.py  chunking.py
fast_agent_stack/core/ai/reranker/: __init__.py  ollama.py  openai.py
fast_agent_stack/core/ai/tools/: __init__.py
fast_agent_stack/core/auth/: __init__.py  api_keys.py  dependencies.py  lifespan.py  models.py  password.py  routes.py  tokens.py
fast_agent_stack/core/auth/backends/: __init__.py  combined.py  factory.py  jwt.py  session.py
fast_agent_stack/core/auth/migrations/: env.py
fast_agent_stack/core/caching/: __init__.py
fast_agent_stack/core/database/: __init__.py  base.py  health.py  lifespan.py  session.py
fast_agent_stack/core/email/: __init__.py  smtp.py
fast_agent_stack/core/observability/: __init__.py
fast_agent_stack/core/ratelimit/: __init__.py
fast_agent_stack/core/redis/: __init__.py
fast_agent_stack/core/storage/: __init__.py
fast_agent_stack/core/storage/backends/: local.py  minio.py  s3.py
fast_agent_stack/core/tasks/: __init__.py
fast_agent_stack/core/vector/: __init__.py
fast_agent_stack/database/: __init__.py
fast_agent_stack/observability/: __init__.py
fast_agent_stack/rag/: __init__.py
fast_agent_stack/storage/: __init__.py
fast_agent_stack/tasks/: __init__.py
fast_agent_stack/template/: .env.example.jinja  Dockerfile.jinja  copier.yml  docker-compose.yml.jinja  main.py.jinja  pyproject.toml.jinja
fast_agent_stack/template/alembic/: env.py.jinja
fast_agent_stack/template/k8s/: configmap.yaml.jinja
fast_agent_stack/template/scripts/: format.sh.jinja  lint.sh.jinja
fast_agent_stack/template/tests/: test_health.py.jinja
fast_agent_stack/template/{% if include_k8s %}k8s{% endif %}/: deployment.yaml.jinja  service.yaml.jinja
fast_agent_stack/template/{{project_name}}/: app.py.jinja  models.py.jinja  routes.py.jinja  schemas.py.jinja  settings.py.jinja  {% if llm_provider != 'none' %}agents.py{% endif %}.jinja  {% if task_broker != 'none' %}tasks.py{% endif %}.jinja
scripts/: docs.sh  format.sh  lint.sh
spec/: ARCHITECTURE.md  DECISIONS.md  DX.md  GLOSSARY.md  INVARIANTS.md  NFR.md  OVERRIDES.md  ROADMAP.md  SCAFFOLDER.md  SCENARIOS.md  VISION.md
spec/adr/: ADR-038.md  ADR-039.md  ADR-040.md  ADR-041.md  ADR-042.md  ADR-043.md  ADR-044.md  ADR-045.md  ADR-046.md  ADR-047.md  ADR-048.md  ADR-049.md  ADR-050.md
tests/: test_ai_agent.py  test_ai_type_layer.py  test_alembic_scaffold.py  test_auth_3c.py  test_auth_backends.py  test_auth_dependencies.py  test_auth_hardening.py  test_auth_lifespan.py  test_auth_models.py  test_auth_routes.py  test_caching.py  test_ci_config.py  test_cli.py  test_config.py  test_database.py  test_email.py  test_email_routes.py  test_error_handlers.py  test_frontend.py  test_llm_backends.py  test_middleware.py  test_observability.py  test_package_skeleton.py  test_phase4c.py  test_ratelimit.py  test_redis_sdk.py  test_release_readiness.py  test_request_id.py  test_scaffolder.py  test_secrets_backends.py  test_tasks.py  test_usage_query.py
tests/docs/: test_pydantic_ai_guide_snippets.py  test_strands_guide_snippets.py  test_tutorial_snippets.py
tests/integration/: conftest.py  test_e2e.py  test_scaffold_smoke.py
tests/integration/storage/: test_storage_local.py
tests/unit/embedding/: test_embedding_protocol.py
tests/unit/extraction/: test_extraction_dispatch.py
tests/unit/rag/: test_chunking.py  test_rag_service.py
tests/unit/reranker/: test_reranker.py
tests/unit/storage/: test_storage_protocol.py
tests/unit/tools/: test_tools.py
tests/unit/vector/: test_pgvector_backend.py  test_vector_protocol.py
(+19 files in other folders)
