[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-agent-stack"
dynamic = ["version"]
description = "An opinionated FastAPI framework for AI/agent production applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.138.0",   # ADR-019; NFR floor; app.frontend() static file serving
    "pydantic>=2.0",              # ADR-003
    "pydantic-settings>=2.0",     # ADR-003
    "sqlalchemy[asyncio]>=2.0",   # ADR-002
    "alembic>=1.13",              # ADR-002
    "typer>=0.12",                # ADR-004
    "copier>=9.0",                # ADR-010
]

[project.scripts]
fastagentstack = "fast_agent_stack.cli.main:app"
fas = "fast_agent_stack.cli.main:app"

[tool.hatch.version]
path = "fast_agent_stack/__version__.py"

[project.optional-dependencies]
# Database drivers
db-postgres = ["asyncpg>=0.29"]
db-sqlite   = ["aiosqlite>=0.19"]
db-mysql    = ["aiomysql>=0.2"]

# Auth — JWT library TBD (NEEDS-DECISION before Phase 3)
auth-jwt     = ["pwdlib[argon2]>=0.3", "pyjwt[crypto]>=2.8", "fastapi-redis-sdk>=0.7"]
auth-session = ["pwdlib[argon2]>=0.3", "fastapi-redis-sdk>=0.7"]

# Admin (ADR-007)
admin = ["sqladmin>=0.16", "itsdangerous>=2.1"]

# LLM backends (ADR-021)
bedrock   = ["aioboto3>=12"]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
litellm   = ["litellm>=1.30"]

# Vector stores
vector-qdrant     = ["qdrant-client>=1.7"]
vector-pgvector   = ["pgvector>=0.2", "asyncpg>=0.29"]
vector-opensearch = ["opensearch-py[async]>=2.3"]
vector-weaviate   = ["weaviate-client>=4"]

# Embedding backends
embedding-bedrock = ["aioboto3>=12"]
embedding-openai  = ["openai>=1.0"]
embedding-local   = ["fastembed>=0.8"]

# Storage backends
storage-s3    = ["aioboto3>=12"]
storage-local = ["aiofiles>=23"]
storage-minio = ["aioboto3>=12"]

# Background tasks (ADR-005, ADR-020)
tasks     = ["dramatiq[redis]>=1.15"]
scheduler = ["periodiq>=0.9"]

# Rate limiting (ADR-016)
rate-limit = ["fastapi-redis-sdk>=0.7"]

# Response caching (ADR-037)
caching = ["fastapi-redis-sdk>=0.7"]

# Email (ADR-018)
email-smtp = ["aiosmtplib>=3"]

# Observability (ADR-009)
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

# Secrets managers (ADR-017)
secrets-aws = ["boto3>=1.34"]
secrets-gcp = ["google-cloud-secret-manager>=2.20"]

# Document extraction
extract-pdf  = ["pymupdf>=1.24"]
extract-docx = ["python-docx>=1.1"]
extract-xlsx = ["openpyxl>=3.1"]

# Reranker backends (ADR-045)
reranker-ollama = ["httpx>=0.27"]
reranker-openai = ["httpx>=0.27"]

# Bundles
ai-full = [
    "fast-agent-stack[openai,anthropic,bedrock,litellm,vector-qdrant,vector-pgvector,storage-s3,storage-local,embedding-openai,embedding-bedrock,reranker-ollama,reranker-openai]",
]
all = [
    "fast-agent-stack[db-postgres,auth-jwt,admin,tasks,scheduler,tracing,ai-full,email-smtp,extract-pdf,extract-docx,extract-xlsx]",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx2>=0.27",
    "ruff>=0.9",
    "mypy>=1.10",
    "tox>=4.15",
    "tox-uv>=1.15",
    "testcontainers[postgres,redis]>=4.0",
    "fakeredis>=2.21",
]
docs = [
    "zensical",
]

[tool.ruff]
target-version = "py311"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "aioboto3.*",
    "botocore.*",
    "redis_fastapi",
    "redis_fastapi.*",
    "fastembed",
    "fastembed.*",
    "pymupdf",
    "pymupdf.*",
    "docx",
    "docx.*",
    "openpyxl",
    "openpyxl.*",
    "aiofiles",
    "aiofiles.*",
    "opensearchpy",
    "opensearchpy.*",
    "pgvector",
    "pgvector.*",
    "weaviate",
    "weaviate.*",
    "periodiq",
    "periodiq.*",
    "dramatiq",
    "dramatiq.*",
    "numpy",
    "numpy.*",
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "litellm",
    "litellm.*",
    "qdrant_client",
    "qdrant_client.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real external services (deselect with '-m not integration')",
    "e2e: marks Tier 2 E2E tests that require Docker (Postgres + Redis containers)",
    "docs: marks tutorial documentation quality tests (file existence, snippet compilation)",
]

[tool.coverage.run]
source = ["fast_agent_stack"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313,py314
isolated_build = true

[testenv]
runner = uv-venv-runner
dependency_groups = dev
extras =
    db-sqlite
    auth-jwt
    auth-session
    admin
    rate-limit
    caching
    tasks
    tracing
    email-smtp
    storage-local
    embedding-local
    extract-pdf
    extract-docx
    extract-xlsx
    vector-qdrant
    vector-pgvector
commands = pytest -m "not integration and not e2e" {posargs}
"""
